--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons+Outlined");
 
 :root {
-  --primary-color: #eea362;
+  --primary-color: #3143d0;
 }
 
 .heading {
@@ -12,6 +12,8 @@
   color: var(--primary-color);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   z-index: 1;
+  position: sticky;
+  top: 0;
   width: 100vw;
   justify-content: space-between;
 }
@@ -37,7 +39,7 @@
   padding: 8rem 3rem 2rem 3rem;
 }
 .card-vertical {
-  width: 16rem;
+  width: 17rem;
 }
 
 .card-image-container {
@@ -117,3 +119,13 @@
   width: 1.25rem;
   height: 1.25rem;
 }
+
+.margin{
+    margin-left: 3rem;
+    margin-top: 2rem;
+}
+
+.cta-btn .cart-btn {
+    background-color: #d6564a !important;
+    color: white !important;
+  }
