--- a/style.css
+++ b/style.css
@@ -6,16 +6,17 @@
   --primary-color: #3143d0;
 }
 
-.heading {
+.heading {  
   background-color: var(--background-color);
   padding: 0.5rem 3rem;
   color: var(--primary-color);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  z-index: 1;
+  z-index: 1000;
   position: sticky;
   top: 0;
   width: 100vw;
   justify-content: space-between;
+  margin-bottom: 20px;
 }
 
 .search-box-input {
@@ -123,9 +124,12 @@
 .margin{
     margin-left: 3rem;
     margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 .cta-btn .cart-btn {
     background-color: #d6564a !important;
     color: white !important;
   }
+
+
